--- a/CFB_Cursos/QT/checkbox/checkbox/mainwindow.ui
+++ b/CFB_Cursos/QT/checkbox/checkbox/mainwindow.ui
@@ -53,7 +53,7 @@
      <string>3° maneira</string>
     </property>
    </widget>
-   <widget class="QWidget" name="">
+   <widget class="QWidget" name="layoutWidget">
     <property name="geometry">
      <rect>
       <x>60</x>
@@ -67,6 +67,15 @@
       <widget class="QCheckBox" name="checkBox_1">
        <property name="text">
         <string>CheckBox_1</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+       <property name="autoExclusive">
+        <bool>false</bool>
+       </property>
+       <property name="tristate">
+        <bool>false</bool>
        </property>
       </widget>
      </item>
