--- a/CFB_Cursos/QT/tabwidgets/tabwidgets/mainwindow.ui
+++ b/CFB_Cursos/QT/tabwidgets/tabwidgets/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>2</number>
     </property>
     <property name="tabsClosable">
      <bool>true</bool>
@@ -95,6 +95,19 @@
     </property>
     <property name="text">
      <string>apagar tab atual</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_3">
+    <property name="geometry">
+     <rect>
+      <x>270</x>
+      <y>170</y>
+      <width>121</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>adicionar cadastro</string>
     </property>
    </widget>
   </widget>
