--- a/CFB_Cursos/QT/arquivos/arquivos/mainwindow.ui
+++ b/CFB_Cursos/QT/arquivos/arquivos/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>582</width>
-    <height>299</height>
+    <width>626</width>
+    <height>370</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,18 +17,26 @@
    <widget class="QWidget" name="">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>10</y>
-      <width>551</width>
-      <height>231</height>
+      <x>0</x>
+      <y>1</y>
+      <width>601</width>
+      <height>311</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
-      <widget class="QListWidget" name="listWidget"/>
+      <layout class="QVBoxLayout" name="verticalLayout">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPlainTextEdit" name="plainTextEdit"/>
+         </item>
+        </layout>
+       </item>
+      </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
        <item>
         <widget class="QPushButton" name="pushButton_gravar">
          <property name="text">
@@ -53,7 +61,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>582</width>
+     <width>626</width>
      <height>21</height>
     </rect>
    </property>
