--- a/CFB_Cursos/QT/arquivos/arquivos/mainwindow.ui
+++ b/CFB_Cursos/QT/arquivos/arquivos/mainwindow.ui
@@ -25,6 +25,13 @@
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_2">
      <item>
+      <widget class="QPushButton" name="pushButton_abrir">
+       <property name="text">
+        <string>Abrir arquivo</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
         <layout class="QHBoxLayout" name="horizontalLayout">
