projeto de bloco de anotações

--- a/CFB_Cursos/QT/projetos/bloco_de_notas/arquivos/arquivos.qrc
+++ b/CFB_Cursos/QT/projetos/bloco_de_notas/arquivos/arquivos.qrc
@@ -13,5 +13,6 @@
         <file>salvar_como.png</file>
         <file>colar.png</file>
         <file>sobre.png</file>
+        <file>imprimir.png</file>
     </qresource>
 </RCC>
